--- a/src/scripts/dbproxy.service
+++ b/src/scripts/dbproxy.service
@@ -1,20 +1,19 @@
 [Unit]
-Description=Kingshard DB Proxy Service
+Description=SMProxy Service
 After=network.target
 
 [Service]
-Environment="CONFIG=/usr/local/db/sm_readonly.yaml" "PIDFILE=/data/tmp_db/dbproxy.pid"
+Environment="CONFIG=/usr/local/db/sm_readonly.yaml" "PIDFILE=/data/tmp_db/smproxy.pid"
 WorkingDirectory=/usr/local/db/
-ExecStart=/usr/local/db/service_kingshard -config $CONFIG  -log-path /data/tmp_db/service.log -log-level=debug -pidfile $PIDFILE
-KillMode=process
-
-# StandardOutput=null
+ExecStart=/usr/local/db/service_sm_proxy -config $CONFIG  -log-path /data/logs/service.log -log-level=debug -pidfile $PIDFILE
 
 Restart=always
-RestartSec=15
 
 User=worker
 Group=worker
+
+LimitNOFILE=100000
+LimitNPROC=100000
 
 [Install]
 WantedBy=multi-user.target
