调整代码和依赖

--- a/src/glide.yaml
+++ b/src/glide.yaml
@@ -9,4 +9,5 @@ import:
   - utils
   - utils/rolling_log
   - utils/atomic2
+  version: 2f66bef634fe739bd45e59bd0d49aaef30637a33
 - package: gopkg.in/yaml.v2
